force-app/main/default/objects/Service__c/fields/Account_Active__c.field-meta.xml
<CustomField>
    <fullName>Account_Active__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account (Active)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Services (Account (Active))</relationshipLabel>
    <relationshipName>Services1</relationshipName>
    <type>Lookup</type>
</CustomField>