force-app/main/default/objects/Service__c/fields/Report_Submission__c.field-meta.xml
<CustomField>
    <fullName>Report_Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Report Submission</label>
    <referenceTo>Report_Submission__c</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>