force-app/main/default/objects/Service__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>Hauling</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Promotion and education</fullName>
            </value>
            <value>
                <fullName>Passenger / Light Truck Tires</fullName>
            </value>
            <value>
                <fullName>Medium Truck Tires</fullName>
            </value>
            <value>
                <fullName>Off-Road Tires (Except Large)</fullName>
            </value>
            <value>
                <fullName>Large Tires</fullName>
            </value>
            <value>
                <fullName>Mulch rubber</fullName>
            </value>
            <value>
                <fullName>Crumb rubber</fullName>
            </value>
            <value>
                <fullName>Tire-derived mulch</fullName>
            </value>
            <value>
                <fullName>Tire-derived aggregate</fullName>
            </value>
            <value>
                <fullName>Tire-derived rubber strips and chunks</fullName>
            </value>
            <value>
                <fullName>Fluff and fibre</fullName>
            </value>
            <value>
                <fullName>Tire-derived metal (no rims)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>